--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@ body {
 
 </font>
 </center>
-
+ 
+ 
+ 
+<center> <font color="red" size="5" face="commercialscript bt, courier" >  10 лет бедным или 1 год богатым ?(c)  </font> </center>
 
 
 
