--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
 
 <font color="4169e1" size="3" >
 Музыка для осущения эстетики сей "сайта"
-
+(Соряныч оно не пашет)
 
 </font>
 </center>
