--- a/index.html
+++ b/index.html
@@ -107,12 +107,20 @@ body {
  
  
  
-<center> <font color="red" size="5" face="commercialscript bt, courier" >  10 лет бедным или 1 год богатым ?(c)  </font> </center>
+<center> 
+
+<font color="red" size="5" face="commercialscript bt, courier" >  10 лет бедным или 1 год богатым ?(c)  </font> </center>
+
+   
 
 
 
 
 </form> </center>
+<botton> <a href="https://www.youtube.com/channel/UCpLCrSVsdf2kZIbqMhOZrXw">  </botton>
+
+<center> <font color="green" size="15"> WANING! </a></font></center>
+<center>    <img src="https://i.ibb.co/4jbnpsr/xwq86-FRDgwg-G6-Yf-RPTWVw-r.jpg">  </center>
 </p>
 </head>
 </center>
