--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body {
 <botton> <a href="https://www.youtube.com/channel/UCpLCrSVsdf2kZIbqMhOZrXw">  </botton>
 
 <center> <font color="green" size="15"> WANING! </a></font></center>
-<center>    <img src="https://i.ibb.co/4jbnpsr/xwq86-FRDgwg-G6-Yf-RPTWVw-r.jpg">  </center>
+<center>    <img src="https://i.ytimg.com/vi/QhNahWt1Q18/hqdefault.jpg">  </center>
 </p>
 </head>
 </center>
