--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
 
 <font color="red" face="CURSIVE" >
 
-<marquee><font size="15">Жизнь-страданье, удовольствие-труд, секс-только с неграми.</font></marquee>
+<marquee><font size="15">femboy, femboy, femboy.</font></marquee>
 
 
 </font>
