--- a/index.html
+++ b/index.html
@@ -72,6 +72,36 @@ body {
  </audio >
  </center>
  
+ <center>
+ <script>           
+window.onload = function(){
+    let buttons = document.querySelectorAll('.show-image');
+ 
+    buttons.forEach(function(btn){
+        btn.addEventListener('click', function(){
+            document.getElementById('open_img').innerHTML = '';
+ 
+            let link = this.getAttribute('data-img');
+            let img = document.createElement('img');
+ 
+            img.src = link;
+ 
+            document.getElementById('open_img').append(img);
+        });
+    });
+};
+</script>
+ 
+<button class="show-image" data-img="https://i.ibb.co/GknLxhQ/qweqweqwe.png" type="button">UWU</button>
+
+<div id="open_img"></div>
+ 
+ 
+ 
+ 
+ </center>
+ 
+ 
 <center>
 <menu>
 <font color="red" size="5"
