--- a/index.html
+++ b/index.html
@@ -114,9 +114,26 @@ window.onload = function(){
 <p>
 
 
+
+
+<div class="photo">
+
+<p><img src="https://i.ibb.co/Cn3g6Tf/image.png"></p>
+
 <center>
-<a href="https://www.youtube.com/watch?v=LtOMvT3XZMA"><img src="https://i.ibb.co/Cn3g6Tf/image.png" alt="image" border="0"></a>
+
+
+<p><img src="https://i.ibb.co/R7m7xnK/ads.png"></p>
+
+
+
+<a href="https://youtu.be/bCQ_3NtRXB8?t=1562"><img src="https://i.ibb.co/gb1zqmq/image.png" alt="image" border="0"></a>
 </center>
+
+
+
+
+
 
 
 
