--- a/index.html
+++ b/index.html
@@ -123,18 +123,80 @@ window.onload = function(){
 <center>
 
 
-<p><img src="https://i.ibb.co/R7m7xnK/ads.png"></p>
+
+<style>
+.raz div {
+  max-width: 8em; /* блок занимает ширину родителя, max-width её ограничивает */
+  min-height: 2em;
+  margin-left: auto;
+  margin-right: 10em;
+  border: 0px solid orange;
+  background: #fff5d7;
+}
+</style>
+
+<div class="raz">
+  
+  <div> <img src="https://i.ibb.co/R7m7xnK/ads.png"> </div> <a href="https://youtu.be/bCQ_3NtRXB8?t=1562"><img src="https://i.ibb.co/gb1zqmq/image.png" alt="image" border="0"></a>
+  
+  
+  
+
+</div>
+<center>
+<center><font color="red" color="5">Это что?</font></center>
+<head>
+<style>
+
+.dropbtn {
+    background-color: black;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: lightgrey;
+    min-width: 200px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: white;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: grey;}
+
+</style>
+</head>
+
+<div class="dropdown">
+<button class="dropbtn">UWU</button>
+<div class="dropdown-content">
+
+<a href="https://rt.pornhub.com/">Pornhub</a>
+<a href="https://rule34.xxx/">Rule34</a>
+<a href="https://www.xvideos.com/">Xvideos</a>
+
+</div>
+</div>
+</body>
 
 
-
-<a href="https://youtu.be/bCQ_3NtRXB8?t=1562"><img src="https://i.ibb.co/gb1zqmq/image.png" alt="image" border="0"></a>
 </center>
-
-
-
-
-
-
 
 
 
