--- a/index.html
+++ b/index.html
@@ -38,10 +38,15 @@ body {
 
 <font color="red" face="CURSIVE" >
 
-<marquee><font size="15">femboy, femboy, femboy.</font></marquee>
+<marquee><font size="15">Femboy, Femboy, Femboy.</font></marquee>
 
 
 </font>
+
+<center><img src="https://i.ibb.co/JKNHDYQ/tenor.gif" alt="tenor" border="0"></center>
+
+
+<center><font color="4169e1" size="15" > WELCOME? </font> </center>
 
 
 <center>
@@ -53,7 +58,7 @@ body {
 
 <font color="4169e1" size="3" >
 Музыка для осущения эстетики сей "сайта"
-(Соряныч оно не пашет)
+(Исправлено,теперь пашет)
 
 </font>
 </center>
