--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
   <meta charset="utf-8">
   <title>  N9S7K3  </title>
  
-  <style>
-   .stroke {
-    font: CURSIVE, CURSIVE;
-    text-shadow: red 2px 2px 0, red -2px -0px 0, 
-                 red -1px 0px 0, red 0px -0px 0;
-   }
-  </style>
+ <img src="https://i.ibb.co/wyyYVyb/5.png">
  </head>
  <h1>
  <body>
@@ -134,9 +128,10 @@ window.onload = function(){
 <center>
 <menu>
 <font color="red" size="5"
-<li>Зигмунд Фрейд</li>
-<li>Тайна человеческой души заключена в психических драмах детства. Докопайтесь до этих драм, и исцеление придет.</li>
-Ха-ха, эта цитата от дорогого Зигмунд`а Фрейд`а пробула в тебе воспоминания, как летом тебя износиловал бомж.
+<li>Во время войны 19xxГода, мой раненый товарищ сказал мне:</li>
+<li>За 2 дня я полностью сошел с ума,
+нормальные люди рассуждают что жизнь коротка,
+а я считаю что она сука длиная пиздец.
 </font>
 </menu>
 <head>
@@ -164,14 +159,7 @@ window.onload = function(){
 }
 </style>
 
-<div class="raz">
-  
-  <div> <img src="https://i.ibb.co/R7m7xnK/ads.png"> </div> <a href="https://youtu.be/bCQ_3NtRXB8?t=1562"><img src="https://i.ibb.co/gb1zqmq/image.png" alt="image" border="0"></a>
-  
-  
-  
 
-</div>
 <center>
 <center><font color="red" color="5">Это что?</font></center>
 <head>
@@ -237,8 +225,8 @@ window.onload = function(){
 <button style="height:50px;width:100px" type="Goshan">Гошан</button> </a>
 
 <center>
-<font color="red">
-Хочу вырозить  уважение "Гошанчику", и дополнить великую песню гошана, приложенной <a href="https://vk.com/video122934939_160852046"> Ссылкой</href> 
+<font color="red" size="15" >
+Фонд золотых цитат!
 </a>
 </font>
 </center>
@@ -247,20 +235,24 @@ window.onload = function(){
  
 <center> 
 
-<font color="red" size="5" face="commercialscript bt, courier" >  10 лет бедным или 1 год богатым ?(c)  </font> </center>
+<font color="red" size="5" face="commercialscript bt, courier" >  10 лет бедным или 1 год богатым ?(c)  </font>  </center>
 
-   
+ <center> <img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/avatars/b0/b05eb0b3b9b303b7417bbee97470d68b0fe0902c_full.jpg"> </center>
+ 
+  
+  
+  <font color="red" size="5" face="commercialscript bt, courier" >  В конечном счёте,все равно мы все умрем)?(c)  </font> <center>
 
-
+<img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/avatars/98/9822bd54e09e05a4410d38f46df2041f49f639f8_full.jpg">
 
 
 </form> </center>
 <botton> <a href="https://www.youtube.com/channel/UCpLCrSVsdf2kZIbqMhOZrXw">  </botton>
 
-<center> <font color="green" size="15"> WANING! </a></font></center>
+<center> <font color="green" size="15"> Don`t click on this text. </a></font></center>
 <center>    <img src="https://i.ytimg.com/vi/QhNahWt1Q18/hqdefault.jpg">  </center>
 <font color="red" size="15">
-<div style="overflow: auto; width:300px; height:200px;">M̷̢̏ã̷̗̟k̵̦̟͑ë̷͎́̿ ̴̝̹̕u̶̗͉̅s̴͕͆̌ ̷͈͂͝w̶͓͒h̸̘͝o̴͔̭̎l̴̥̓ë̷̳̱ M̷̢̏ã̷̗̟k̵̦̟͑ë̷͎́̿ ̴̝̹̕u̶̗͉̅s̴͕͆̌ ̷͈͂͝w̶͓͒h̸̘͝o̴͔̭̎l̴̥̓ë̷̳̱ M̷̢̏ã̷̗̟k̵̦̟͑ë̷͎́̿ ̴̝̹̕u̶̗͉̅s̴͕͆̌ ̷͈͂͝w̶͓͒h̸̘͝o̴͔̭̎l̴̥̓ë̷̳̱</div>
+<div style="overflow: auto; width:300px; height:200px;">Тут была цитата из dead space, но она меня заебала</div>
 </font>
 </p>
 </head>
