--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@ window.onload = function(){
 
 <font color="red" size="5" face="commercialscript bt, courier" >  10 лет бедным или 1 год богатым ?(c)  </font>  </center>
 
- <center> <img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/avatars/b0/b05eb0b3b9b303b7417bbee97470d68b0fe0902c_full.jpg"> </center>
+ <center> <img src="https://i.ibb.co/tKQztmn/b05eb0b3b9b303b7417bbee97470d68b0fe0902c-full.jpg"> </center>
  
   
   
   <font color="red" size="5" face="commercialscript bt, courier" >  В конечном счёте,все равно мы все умрем)?(c)  </font> <center>
 
-<img src="https://cdn.cloudflare.steamstatic.com/steamcommunity/public/images/avatars/98/9822bd54e09e05a4410d38f46df2041f49f639f8_full.jpg">
+<img src="https://i.ibb.co/RhGp0Qr/9822bd54e09e05a4410d38f46df2041f49f639f8-full.jpg">
 
 
 </form> </center>
