--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ window.onload = function(){
 <button style="height:50px;width:100px" type="Goshan">Гошан</button> </a>
 
 <center>
-<font color="red" size="15" >
+<font color="ffd700" size="15" >
 Фонд золотых цитат!
 </a>
 </font>
