--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ window.onload = function(){
 <center> <font color="green" size="15"> Don`t click on this text. </a></font></center>
 <center>    <img src="https://i.ytimg.com/vi/QhNahWt1Q18/hqdefault.jpg">  </center>
 <font color="red" size="15">
-<div style="overflow: auto; width:300px; height:200px;">Тут была цитата из dead space, но она меня заебала</div>
+<center> <img src="https://i.ibb.co/t8JLH1p/k-ZYc-FEGfy-Iw.jpg"> </center>
 </font>
 </p>
 </head>
